[package]
name = "rust_jaccard"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arrow = "53.0"
parquet = "53.0"
walkdir = "2.3"
sha2 = "0.10"
rayon = "1.7"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }

[[bin]]
name = "jaccard_analyzer"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.20.0"
